# gsoc2026_multirobot

bridge/overhead_test/: CMakeLists.txt  package.xml  test_overhead.sh
bridge/overhead_test/config/: bridge.yaml
bridge/overhead_test/launch/: overhead_test_dynamic.launch.py  overhead_test_original.launch.py
bridge/overhead_test/worlds/: multi_robot.sdf
demo_ns_support/: README.md
demo_ns_support/launch/: demo_ns_support.launch.xml
demo_ns_support/models/vehicle/: model.sdf
demo_ns_support/models/vehicle_group/: model.sdf
demo_ns_support/worlds/: multi_robot.sdf
demo_original/: package.xml
demo_original/launch/: demo_original.launch.xml
demo_original/models/vehicle/: model.sdf
demo_original/models/vehicle_1_1/: model.config  model.sdf
demo_original/models/vehicle_1_2/: model.sdf
demo_original/models/vehicle_1_3/: model.sdf
demo_original/models/vehicle_2_2/: model.sdf
demo_original/models/vehicle_2_3/: model.sdf
demo_original/models/vehicle_3_2/: model.sdf
demo_original/models/vehicle_3_3/: model.sdf
demo_original/models/vehicle_group_2/: model.sdf
demo_original/models/vehicle_group_3/: model.sdf
demo_original/worlds/: multi_robot.sdf  multi_robot_bug.sdf
demo_xacro/: CMakeLists.txt  package.xml
demo_xacro/launch/: demo_xacro.launch.xml
demo_xacro/worlds/: multi_robot.sdf.xacro
ns_support_demo/demo_ns_support/: CMakeLists.txt  README.md  package.xml
ns_support_demo/demo_ns_support/config/: bridge.yaml
ns_support_demo/demo_ns_support/launch/: demo_ns_support.launch.py  demo_ns_support.launch.xml
ns_support_demo/demo_ns_support/worlds/: multi_robot.sdf
ns_support_demo/demo_original/: CMakeLists.txt  README.md  package.xml
ns_support_demo/demo_original/config/: bridge.yaml
ns_support_demo/demo_original/launch/: demo_original.launch.py  demo_original.launch.xml  demo_original_bug.launch.xml
ns_support_demo/demo_tb3/: CMakeLists.txt  README.md  package.xml
ns_support_demo/demo_tb3/launch/: simulation.launch.py  simulation_gps.launch.py  spawn_tb3.launch.py  spawn_tb3_gps.launch.py
ns_support_demo/demo_tb3/urdf/: gz_waffle.sdf  gz_waffle.sdf.xacro  gz_waffle.urdf  gz_waffle_gps.sdf  gz_waffle_gps.sdf.xacro  gz_waffle_gps.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_gps.urdf
ns_support_demo/demo_tb3_urdf/: CMakeLists.txt  README.md  package.xml
ns_support_demo/demo_tb3_urdf/launch/: simulation.launch.py  spawn_tb3.launch.py  (+1 more)
ns_support_demo/demo_xacro/: CMakeLists.txt  README.md  package.xml
ns_support_demo/demo_xacro/config/: bridge.yaml
ns_support_demo/demo_xacro/launch/: demo_xacro.launch.py  demo_xacro.launch.xml
ns_support_demo/demo_xacro/models/vehicle/: model.sdf.xacro
ns_support_demo/demo_xacro/models/vehicle_group/: model.sdf.xacro  model_xacro.sdf.xacro
ns_support_demo/demo_xacro/worlds/: multi_robot.sdf.xacro
(+11 files in other folders)
