<package format="3">
  <name>demo_xacro</name>
  <version>0.0.0</version>
  <description>TODO</description>
  <license>Apache 2.0</license>
  <maintainer email="1409947012@qq.com">C88-YQ</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>xacro</build_depend>

  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>sdformat_urdf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
